added filelinklist which enumerates all files in the wget subdirectory